--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,90 @@ body {
     color: black;
     background-color: transparent;
 }
+
+h2 {
+    text-align: center;
+    color: black;
+}
+
+button {
+    width: 240px;
+    margin-top: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    box-shadow: 2px 2px  5px 1px grey;
+    background-color: black;
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border: black solid 1px;
+    justify-content: center;
+    display: flex;
+    font-size: 1.5em
+}
+
+button:hover {
+    background-color: yellow;
+    color: black;
+    font-weight: bold;
+}
+
+button:focus {
+    outline: none;
+}
+
+button:active {
+    position: relative;
+    top: 1px;
+    left: 2px;
+    box-shadow: 1px 1px  2px 1px grey;
+    background-color: yellow;
+    color: black;
+    font-weight: bold;
+}
+
+
+button.subtle {
+    width: 80px;
+    border: black solid 1px;
+    background-color: transparent;
+    color: grey;
+    font-size: 1.2em;
+    box-shadow: none;
+    padding-top: 10px;
+    padding-bottom: 10px;
+/*    border: none;*/
+}
+
+button.subtle:hover {
+    text-decoration: none;
+}
+
+button.logout {
+    background-color: transparent;
+    color: grey;
+    float: right;
+    font-size: 1.8em,
+    font-weight: normal;
+    margin-right: 10px;
+    margin-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    width: 100px;
+    border: none;
+    box-shadow: none;
+}
+
+button.logout:hover {
+    background-color: yellow;
+    color: black;
+    font-weight: bold;
+    border: black solid 1px;
+    box-shadow: 1px 1px  2px 1px grey;
+}
+
+a {
+    text-decoration: none;
+}
