--- a/css/style-dashboard.css
+++ b/css/style-dashboard.css
@@ -3,6 +3,10 @@ h1 {
 	text-align: center;
 }
 
+h2 {
+    margin-bottom: 50px;
+}
+
 #frame {
 	width: 100%;
 	margin-left: auto;
@@ -12,6 +16,7 @@ h1 {
     padding-right: 10px;
     border-radius: 10px;
     border: solid black 2px;
+    padding-bottom: 40px;
 }
 
 @media only screen and (min-width: 576px) {
@@ -32,3 +37,9 @@ img {
 	width: 30%;
 }
 
+button {
+    background-color: transparent;
+    color: black;
+    margin-top: 0px;
+    margin-bottom: 5px;
+}
