--- a/css/style.css
+++ b/css/style.css
@@ -7,37 +7,96 @@ body {
     background-color: transparent;
 }
 
-h2 {
-    margin-top: 30px;
-    text-align: center;
-    color: black;
+.frame {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    border-radius: 10px;
+    border: solid black 2px;
 }
 
+.innerframe {
+    margin-top: 50px;
+}
+
+@media only screen and (min-width: 576px) {
+  /* For desktop: */
+  .frame {
+    margin-top: 10%;
+    width: 50%;
+    max-width: 500px;
+  }
+}
+
+h1  {
+    margin-top: 30px;
+    text-align: center;
+    font-size: 24px;
+    font-weight: bold;
+    clear: both;
+}
+
+h1.headerwithlogout {
+    clear: both;
+}
+
+h2 {
+    text-align: center;
+    font-size: 20px;
+}
+
+.input-fields, select, input {
+    width: 100%;
+    height: 40px;
+    margin-bottom: 20px;
+    line-height: 2.4em;
+    font-weight: 500;
+    font-size: 1.1em;
+    border: lightgrey solid 1px;
+    border-radius: 10px;
+    padding-left: 5px;
+}
+
+.input-fields:focus, .input-fields:hover, input:hover, input:focus, select:hover, select:focus, textarea:hover, textarea:focus {
+    outline: none;
+    background-color: yellow;
+    border-radius: 10px;
+}
+
+textarea {
+    background-color: white;
+    width: 95%;
+    height: 6em;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    font-family: Tahoma, sans-serif;
+    margin-left: 2.5%;
+    margin-right: 2.5%;
+}
+
+
 button {
-    width: 240px;
+    width: 50%;
     margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 20px;
     border-radius: 10px;
-    box-shadow: 2px 2px  5px 1px grey;
-    background-color: black;
-    color: white;
+    box-shadow: 1px 1px 1px 1px grey;
+    background-color: transparent;
     padding-top: 10px;
     padding-bottom: 10px;
     border: black solid 1px;
     justify-content: center;
     display: flex;
-    font-size: 1.5em
+    font-size: 1.0em
 }
 
-button:hover {
+button:hover, button:focus {
     background-color: yellow;
     color: black;
     font-weight: bold;
-}
-
-button:focus {
     outline: none;
 }
 
@@ -51,31 +110,13 @@ button:active {
     font-weight: bold;
 }
 
-
-button.subtle {
-    width: 80px;
-    border: black solid 1px;
-    background-color: transparent;
-    color: grey;
-    font-size: 1.2em;
-    box-shadow: none;
-    padding-top: 10px;
-    padding-bottom: 10px;
-/*    border: none;*/
-}
-
-button.subtle:hover {
-    text-decoration: none;
-}
-
 button.logout {
     background-color: transparent;
     color: grey;
     float: right;
     font-size: 1.8em,
     font-weight: normal;
-    margin-right: 10px;
-    margin-top: 10px;
+    margin-top: 0px;
     padding-left: 10px;
     padding-right: 10px;
     width: 100px;
@@ -83,22 +124,116 @@ button.logout {
     box-shadow: none;
 }
 
-button.logout:hover {
+button.logout:hover, button.logout:focus {
     background-color: yellow;
     color: black;
     font-weight: bold;
     border: black solid 1px;
-    box-shadow: 1px 1px  2px 1px grey;
+    box-shadow: 1px 1px  1px 1px grey;
+}
+
+.dashboardbutton {
+    margin: 10px auto;
+    width: 80%;
 }
 
 a {
-    text-decoration: none;
+    color: black;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+}
+
+a:hover, a:focus {
+    font-weight: bold;
+    border: none;
+    outline: none;
+}
+
+.logo {
+    width: 25%;
+    margin-bottom: 50px;
+    display: inline;
+    float: left;    /*display: block;*/
+}
+
+
+table {
+    margin-top: 20px;
+    margin-left:  auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    border-top: 3px solid black;
+    border-bottom: 3px solid black;
+    width: 90%;
+}
+
+th {
+    border-bottom: 1px solid black;
+/*    background-color: black;
+    color: white;*/
+    font-weight: bold;
+    padding: 5px;
+    border-bottom: 2px solid black;
+}
+
+td {
+    margin: 0 auto;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 5px;
+}
+
+/*tr:nth-child(even) {
+  background-color: #eee;
+}
+tr:nth-child(odd) {
+ background-color: #fff;
+}*/
+
+tr:hover {
+    background-color: yellow;
+    color: black;
+}
+
+form p {
+    margin-bottom: 2px;
+    padding-left: 5px;
+    font-weight: bold;
+}
+
+.success-message {
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    color: green;
+    font-weight: bold;
+}
+
+.error-message {
+    display: block;
+    text-align: center;
+    margin: 0 auto;
+    color: red;
+    font-weight: bold;
 }
 
 .impressum {
-    margin-top: 20px;
-    margin-right: 10px;
-    text-align: center;
-    display: block;
-    color: red;
+    margin-top: 30px;
+}
+
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: black;
+  opacity: 0.5;
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: black;
+  opacity: 0.5;
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: black;
+  opacity: 0.5;
 }
